--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,7 +63,7 @@ jobs:
     - uses: actions/checkout@v2
     
     - name: Compose Integration
-      run: docker-compose -f .\docker-compose-full-integration.yml up -d
+      run: docker-compose -f docker-compose-full-integration.yml up -d
       
     - name: Integration Test
-      run: newman run .\tests\Chores.postman_collection.json
+      run: newman run tests\Chores.postman_collection.json
