--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,6 @@ on:
 jobs:
   api-build:
     runs-on: ubuntu-latest
-    continue-on-error: true
     strategy:
       fail-fast: false
       matrix:
@@ -32,7 +31,6 @@ jobs:
 
   ui-build:
     runs-on: ubuntu-latest
-    continue-on-error: true
     strategy:
       fail-fast: false
       matrix:
@@ -60,7 +58,6 @@ jobs:
 
   integration-test:
     runs-on: ubuntu-latest
-    continue-on-error: true
     strategy:
       fail-fast: false
 
@@ -71,4 +68,4 @@ jobs:
       run: docker-compose -f docker-compose-full-integration.yml up -d
       
     - name: Integration Test
-      run: newman run tests\Chores.postman_collection.json
+      run: newman run .\tests\Chores.postman_collection.json
