--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,9 +52,9 @@ jobs:
       working-directory: ./apps/choreui
       run: npm run build --if-present
 
-    - name: Test
-      working-directory: ./apps/choreui
-      run: npm test
+    # - name: Test
+    #   working-directory: ./apps/choreui
+    #   run: npm test
 
   integration-test:
     runs-on: ubuntu-latest
