--- a/apps/choreui/package.json
+++ b/apps/choreui/package.json
@@ -19,7 +19,7 @@
     "@angular/platform-browser": "12.1.4",
     "@angular/platform-browser-dynamic": "12.1.4",
     "@angular/router": "12.1.4",
-    "bootstrap": "4.6.0",
+    "bootstrap": "5.0.2",
     "rxjs": "6.6.0",
     "tslib": "2.0.0",
     "zone.js": "0.11.3",
@@ -29,19 +29,19 @@
     "@angular-devkit/build-angular": "12.1.4",
     "@angular/cli": "12.1.4",
     "@angular/compiler-cli": "12.1.4",
-    "@types/jasmine": "3.6.0",
-    "@types/node": "12.11.1",
-    "codelyzer": "6.0.0",
-    "jasmine-core": "3.6.0",
-    "jasmine-spec-reporter": "5.0.0",
-    "karma": "6.1.0",
-    "karma-chrome-launcher": "3.1.0",
-    "karma-coverage": "2.0.3",
-    "karma-jasmine": "4.0.0",
-    "karma-jasmine-html-reporter": "1.5.0",
-    "protractor": "7.0.0",
-    "ts-node": "8.3.0",
-    "tslint": "6.1.0",
-    "typescript": "4.3.5"
+    "@types/jasmine": "^3.6.0",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^6.0.0",
+    "jasmine-core": "^3.6.0",
+    "jasmine-spec-reporter": "^5.0.0",
+    "karma": "6.3.4",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-coverage": "^2.0.3",
+    "karma-jasmine": "^4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
+    "protractor": "^7.0.0",
+    "ts-node": "^8.3.0",
+    "tslint": "^6.1.0",
+    "typescript": "^4.3.5"
   }
 }
