--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,7 @@ name: Continuous Integration
 
 on: 
   push: 
-    branches: [ $default-branch ]
+    branches: [ main ]
   pull_request:
   workflow_dispatch:
 
