--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Setup .NET Core SDK 6.0.x
-    - uses: actions/setup-dotnet@v1
+      uses: actions/setup-dotnet@v1
       with:
         dotnet-version: '6.0.x'
         include-prerelease: true
@@ -34,7 +34,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node-version: [15.x, 16.x] # Angular 12 no longer support Node.js version of < 15
+        node-version: [15.x, 16.x] # Angular no longer support Node.js version of < 15
 
     steps:
     - uses: actions/checkout@v2
