--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,7 +65,7 @@ jobs:
     - uses: actions/checkout@v2
     
     - name: Compose Integration
-      run: docker-compose -f docker-compose-full-integration.yml up -d
-      
+      run: docker-compose -f docker-compose-full-integration.yml up -d -e NEW_RELIC_API_KEY=${{ secrets.NEW_RELIC_API_KEY }} -e NEW_RELIC_ACCOUNT_ID=${{ secrets.NEW_RELIC_ACCOUNT_ID }}
+
     - name: Integration Test
       run: newman run ./tests/Chores.postman_collection.json
