--- a/docker-compose-full-integration.yml
+++ b/docker-compose-full-integration.yml
@@ -14,6 +14,8 @@ services:
     - 5000:80
     environment:
     - ConnectionStrings__ChoreDb=Username=docker;Password=docker;Host=postgres;Database=choredb;
+    - NEW_RELIC_API_KEY=$NEW_RELIC_API_KEY
+    - NEW_RELIC_ACCOUNT_ID=$NEW_RELIC_ACCOUNT_ID
     healthcheck:
       test: curl -f http://localhost:5000/health || exit 1
       interval: 5s
