--- a/apps/choreui/package.json
+++ b/apps/choreui/package.json
@@ -11,24 +11,24 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "12.1.4",
-    "@angular/common": "12.1.4",
-    "@angular/compiler": "12.1.4",
-    "@angular/core": "12.1.4",
-    "@angular/forms": "12.1.4",
-    "@angular/platform-browser": "12.1.4",
-    "@angular/platform-browser-dynamic": "12.1.4",
-    "@angular/router": "12.1.4",
-    "bootstrap": "5.0.2",
-    "rxjs": "6.6.0",
-    "tslib": "2.0.0",
-    "zone.js": "0.11.3",
-    "y18n": "5.0.5"
+    "@angular/animations": "^12.1.4",
+    "@angular/common": "^12.1.4",
+    "@angular/compiler": "^12.1.4",
+    "@angular/core": "^12.1.4",
+    "@angular/forms": "^12.1.4",
+    "@angular/platform-browser": "^12.1.4",
+    "@angular/platform-browser-dynamic": "^12.1.4",
+    "@angular/router": "^12.1.4",
+    "bootstrap": "^5.0.2",
+    "rxjs": "^6.6.0",
+    "tslib": "^2.0.0",
+    "zone.js": "^0.11.3",
+    "y18n": "^5.0.5"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "12.1.4",
-    "@angular/cli": "12.1.4",
-    "@angular/compiler-cli": "12.1.4",
+    "@angular-devkit/build-angular": "^12.1.4",
+    "@angular/cli": "^12.1.4",
+    "@angular/compiler-cli": "^12.1.4",
     "@types/jasmine": "^3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
